...
                android:layout_width="300dp"
                android:layout_height="300dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:id="@+id/imageView"
                android:layout_gravity="center"/>
        <Button
                android:text="Zdjęcie"
                android:layout_width="149dp"
                android:layout_height="87dp"
                android:id="@+id/photoButton"
                android:layout_gravity="bottom|center"/>
        <Button android:text="Dzień"
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
...
