<resources>
    <string name="app_name">CatOrNot</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_odinstaluj">Odinstaluj</string>
    <string name="action_pomoc">Pomoc</string>
</resources>
